styles/cards.scss
/************
* Map cards *
************/
.map-card {
  width: 80%; 
  height: 80vh;
}

.map-card-small {
  width: 500px;
}

/****************
* Profile Cards *
****************/

.profile-card {
  width: 380px;
  border: none;
  border-radius: 15px;
  background-color: #fff;
  position: relative;
  min-height: 50vh;
}

.upper {
  height: 100px;
  background-color: #FB1B1B;
  width: 100%;
  border-top-left-radius: 10px;
  border-top-right-radius: 10px;
}

// Handles images
.user {
  position: relative;
  height: 100px;
}

.profile {
  // Profile image
  img {
    height: 120px;
    width: 120px;
    margin-top: 2px;
    background-color: #fff;
  }

  // Profile image border and middle positioning
  position: relative;
  top: -50px;
  margin: 0 auto;
  height: 130px;
  width: 130px;
  border: 3px solid #fff;
  border-radius: 50%;
}


.profile-btn {
  border-radius: 5px;
  padding-left: 20px;
  padding-right: 20px;
  height: 35px;
}

.stats span {
  display: block;
  font-size: 29px;
}

/*****************
* Map Info Cards *
*****************/

.map-info-container {
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 0 auto;
  width: 100%;

  .map-info {
    width: 80%;
    height: 600px;
  }

  h5 {
    font-size: 3rem;
  }
  
  p {
    font-size: 1.5rem;
  }
}

